[workspace]

resolver = "2"

members = [ "bbs-sshd" ]

[workspace.dependencies]
russh = { git = "https://github.com/warp-tech/russh", rev = "0fc65ea1d45257c0aef2044d333c634a35891402" }
russh-keys = { git = "https://github.com/warp-tech/russh", rev = "0fc65ea1d45257c0aef2044d333c634a35891402" }
russh-config = { git = "https://github.com/warp-tech/russh", rev = "0fc65ea1d45257c0aef2044d333c634a35891402" }
russh-cryptovec = { git = "https://github.com/warp-tech/russh", rev = "0fc65ea1d45257c0aef2044d333c634a35891402" }
