[package]
name = "bbs-sshd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.1.0"
futures = "^0.3.21"
thrussh = { path = "../thrussh/thrussh" }
thrussh-keys = { path = "../thrussh/thrussh-keys" }
tokio = { version = "^1.19.2", features = ["signal", "time"] }
libc = "^0.2.126"
socket2 = { version = "^0.4.4", features = ["all"] }
log = { version = "^0.4.17", features = ["serde", "release_max_level_trace"] }
ssh-keys = "^0.1.4"
syslog = "^6.0.1"
fork = "^0.1.19"
nix = "^0.24.1"
clap = { version = "^3.1.18", features = ["cargo"] }
toml = "^0.5.9"
serde = "^1.0.137"
serde_derive = "^1.0.137"
proctitle = "^0.1.1"
time = "^0.3.9"
rlimit = "^0.8.3"
