[package]
name = "thrussh-keys"
version = "0.20.6"
edition = "2018"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Deal with SSH keys: load them, decrypt them, call an SSH agent."
keywords = ["ssh"]
repository = "https://nest.pijul.com/pijul/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://docs.rs/thrussh-keys"
license = "Apache-2.0"
include = [
"Cargo.toml",
"src/lib.rs",
"src/pem.rs",
"src/agent/mod.rs",
"src/agent/msg.rs",
"src/agent/server.rs",
"src/agent/client.rs",
"src/bcrypt_pbkdf.rs",
"src/blowfish.rs",
"src/encoding.rs",
"src/format/mod.rs",
"src/format/openssh.rs",
"src/format/pkcs5.rs",
"src/format/pkcs8.rs",
"src/key.rs",
"src/signature.rs"
]

[dependencies]
data-encoding = "2.3.2"
byteorder = "1.4.3"
tokio = { version = "1.19.2", features = [ "io-util", "rt-multi-thread", "time", "net" ] }
futures = "0.3.21"
cryptovec = "0.6.1"
yasna = { version = "0.5.0", features = [ "bit-vec", "num-bigint" ] }
num-bigint = "0.4.3"
num-integer = "0.1.45"
openssl = "0.10.40"
bit-vec = "0.6.3"
thrussh-libsodium = "0.2.1"
serde_derive = "1.0.137"
serde = "1.0.137"
dirs = "4.0.0"
log = "0.4.17"
thiserror = "1.0.31"

[dev-dependencies]
env_logger = "0.9.0"
tempdir= "0.3.7"
