[package]
name = "thrussh-keys"
version = "0.20.6"
edition = "2018"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Deal with SSH keys: load them, decrypt them, call an SSH agent."
keywords = ["ssh"]
repository = "https://nest.pijul.com/pijul/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://docs.rs/thrussh-keys"
license = "Apache-2.0"
include = [
"Cargo.toml",
"src/lib.rs",
"src/pem.rs",
"src/agent/mod.rs",
"src/agent/msg.rs",
"src/agent/server.rs",
"src/agent/client.rs",
"src/bcrypt_pbkdf.rs",
"src/blowfish.rs",
"src/ec.rs",
"src/ed25519.rs",
"src/encoding.rs",
"src/format/mod.rs",
"src/format/openssh.rs",
"src/format/pkcs5.rs",
"src/format/pkcs8.rs",
"src/key.rs",
"src/signature.rs"
]

[dependencies]
data-encoding = "^2.3.2"
byteorder = "^1.4.3"
tokio = { version = "^1.19.2", features = [ "io-util", "rt-multi-thread", "time", "net" ] }
futures = "^0.3.21"
cryptovec = "^0.6.1"
yasna = { version = "^0.5.0", features = [ "bit-vec", "num-bigint" ] }
num-bigint = "^0.4.3"
num-integer = "^0.1.45"
num-traits = "^0.2.15"
bit-vec = "^0.6.3"
serde_derive = "^1.0.137"
serde = "^1.0.137"
dirs = "^4.0.0"
log = "^0.4.17"
thiserror = "^1.0.31"
rand = "^0.8.5"
rsa = "^0.6.1"
sha1 = "^0.10.4"
sha2 = "^0.10.5"
digest = "^0.10.3"
p256 = "^0.11.1"
p384 = "^0.11.2"
elliptic-curve = "^0.12.1"
crypto-bigint = "^0.4.4"
typenum = "^1.15.0"
ecdsa = "^0.14.6"
block-padding = "^0.3.2"
cipher = "^0.4.3"
cbc = { version = "^0.1.2", features = [ "alloc", "block-padding" ] }
ctr = "^0.9.1"
aes = "^0.8.1"
md-5 = "^0.10.4"
hmac = "^0.12.1"
pbkdf2 = "^0.11.0"
ed25519-dalek = "^1.0.1"
ed25519 = "^1.5.2"

[dev-dependencies]
env_logger = "^0.9.0"
tempdir= "0.3.7"
tokio-stream = { version = "^0.1.9", features = [ "net" ] }
