[package]
name = "thrussh"
description = "A client and server SSH library."
keywords = ["ssh"]
version = "0.32.10"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
repository = "https://nest.pijul.com/pijul/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://docs.rs/thrussh"
license = "Apache-2.0"
readme = "../README.md"
include = [
"Cargo.toml",
"src/auth.rs",
"src/compression.rs",
"src/kex.rs",
"src/key.rs",
"src/lib.rs",
"src/msg.rs",
"src/negotiation.rs",
"src/pty.rs",
"src/session.rs",
"src/sshbuffer.rs",
"src/ssh_read.rs",
"src/cipher/chacha20poly1305.rs",
"src/cipher/clear.rs",
"src/cipher/mod.rs",
"src/client/mod.rs",
"src/client/session.rs",
"src/client/encrypted.rs",
"src/client/kex.rs",
"src/client/proxy.rs",
"src/server/mod.rs",
"src/server/encrypted.rs",
"src/server/kex.rs",
"src/server/session.rs",
"src/sodium.rs",
]
edition = "2018"

[features]
default = [ "flate2" ]

[dependencies]
aes = "0.8.1"
hmac = "0.12.1"
sha2 = "0.10.2"
sha-1 = "0.10.0"
byteorder = "1.4.3"
bitflags = "1.3.2"
log = "0.4.17"
thrussh-keys = { version = "0.20.0", path = "../thrussh-keys" }
openssl = "0.10.40"
thrussh-libsodium = "0.2.1"
cryptovec = "0.6.1"
tokio = { version = "1.19.2", features = [ "io-util", "rt-multi-thread", "time", "net", "sync", "macros", "process" ] }
futures = "0.3.21"
thiserror = "1.0.31"
flate2 = { version = "1.0.24", optional = true }
rand = "0.8.5"
rsa = "0.6.1"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.19.2", features = [ "io-util", "rt-multi-thread", "time", "net", "sync", "macros" ] }
anyhow = "1.0.57"
